--- a/feature/movie-details/src/main/res/values/dimens.xml
+++ b/feature/movie-details/src/main/res/values/dimens.xml
@@ -2,6 +2,8 @@
 
 <resources>
 
+    <dimen name="pbLoadingHeight">250dp</dimen>
+    <dimen name="pbLoadingPadding">100dp</dimen>
     <dimen name="ivBackdropHeight">250dp</dimen>
 
 </resources>
