[movies] fix: Update tools content with full package name
Since the auto-manifest plugin created new package names for the
Android modules, those do not match anymore. Thus, the full package
name is required for it to work. Another optimization would have been
to update the underlying package structure of the Android modules as
well, but this is left as potential future work.

--- a/app/src/main/res/layout/app_activity.xml
+++ b/app/src/main/res/layout/app_activity.xml
@@ -6,7 +6,7 @@
     android:id="@+id/ctrApp"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".app.AppActivity"
+    tools:context="io.petros.movies.app.AppActivity"
     tools:ignore="UnusedResources">
 
     <androidx.constraintlayout.widget.ConstraintLayout
