[movies] build: Remove splash module
The 'splash' module was only used for its 'SplashTheme' style, which is
now moved to the 'core' module and as such making 'splash' module
totally obsolete.

--- a/core/src/main/res/values/theme.xml
+++ b/core/src/main/res/values/theme.xml
@@ -28,6 +28,10 @@
         <item name="snackbarButtonStyle">@style/Widget.App.Snackbar.Button</item>
     </style>
 
+    <style name="SplashTheme" parent="AppTheme">
+        <item name="android:windowBackground">@drawable/background</item>
+    </style>
+
     <!-- Toolbar -->
     <style name="ToolbarTheme" parent="AppTheme">
         <item name="android:textColorPrimary">@color/white</item>
