[movies-27] feature: Replace infinite recycler view with recycler view
The custom 'InfiniteRecyclerView' class is no longer necessary and thus
can be replaced with a plain 'RecyclerView'. And with that, the
'loadData(...)' callback is no longer necessary as well, thus it is
removed.

--- a/feature/movies/src/main/res/layout/movies_fragment.xml
+++ b/feature/movies/src/main/res/layout/movies_fragment.xml
@@ -27,7 +27,7 @@
 
     </com.google.android.material.appbar.AppBarLayout>
 
-    <io.petros.movies.core.list.infinite.InfiniteRecyclerView
+    <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
         style="@style/RecyclerView"
         android:layout_width="match_parent"
