--- a/feature/movies/src/main/res/layout/movie_item_view.xml
+++ b/feature/movies/src/main/res/layout/movie_item_view.xml
@@ -3,6 +3,11 @@
 <merge xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    tools:layout_height="wrap_content"
+    tools:layout_marginBottom="@dimen/cdItemVerticalMargin"
+    tools:layout_marginEnd="@dimen/cdItemHorizontalMargin"
+    tools:layout_marginStart="@dimen/cdItemHorizontalMargin"
+    tools:layout_width="match_parent"
     tools:parentTag="com.google.android.material.card.MaterialCardView">
 
     <androidx.constraintlayout.widget.ConstraintLayout
