[movies] ui: Remove redundant material word from palette colors

--- a/core/src/main/res/values/colors.xml
+++ b/core/src/main/res/values/colors.xml
@@ -3,10 +3,10 @@
 <resources>
 
     <!-- Theme -->
-    <color name="colorPrimary">@color/green_material_A700</color>
-    <color name="colorPrimaryVariant">@color/green_material_800</color>
-    <color name="colorSecondary">@color/pink_material_A200</color>
-    <color name="colorSecondaryVariant">@color/pink_material_A700</color>
+    <color name="colorPrimary">@color/green_A700</color>
+    <color name="colorPrimaryVariant">@color/green_800</color>
+    <color name="colorSecondary">@color/pink_A200</color>
+    <color name="colorSecondaryVariant">@color/pink_A700</color>
     <color name="colorBackground">@color/design_default_color_background</color>
     <color name="colorOnBackground">@color/colorPrimary</color>
     <color name="colorSnackbarBackground">@color/colorPrimary</color>
