--- a/core/src/main/res/values/palette.xml
+++ b/core/src/main/res/values/palette.xml
@@ -270,6 +270,7 @@
     <color name="brown_600">#6D4C41</color>
     <color name="brown_700">#5D4037</color>
     <color name="brown_800">#4E342E</color>
+    <color name="brown_900">#3E2723</color>
 
     <!--grey-->
     <color name="grey_50">#FAFAFA</color>
