--- a/core/src/main/res/values-night/colors.xml
+++ b/core/src/main/res/values-night/colors.xml
@@ -4,6 +4,8 @@
     <!-- Theme -->
     <color name="colorBackground">@color/black</color>
     <color name="colorOnBackground">@color/colorPrimaryVariant</color>
+
+    <!-- Snackbar -->
     <color name="colorSnackbarBackground">@color/black</color>
     <color name="colorSnackbarText">@color/design_default_color_error</color>
 
