--- a/lib/picker/src/main/res/values-w820dp/dimens.xml
+++ b/lib/picker/src/main/res/values-w820dp/dimens.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
 
-    <dimen name="activity_horizontal_margin">64dp</dimen>
+    <dimen name="activity_horizontal_margin" tools:ignore="UnusedResources">64dp</dimen>
 
 </resources>
