[movies] analysis: Remove android lint disable for core

--- a/core/src/main/res/drawable/background.xml
+++ b/core/src/main/res/drawable/background.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:ignore="UnusedResources">
 
     <item android:drawable="@color/colorBackground" />
 
     <item
         android:drawable="@drawable/logo"
-        android:gravity="center"/>
+        android:gravity="center" />
 
 </layer-list>
