[movies] analysis: Remove content description from disabled lint issues
Also, as part of this change all previously ignored 'ContentDescription'
views now have the appropriate content description attached to them.

--- a/feature/movie-details/src/main/res/layout/movie_details_fragment.xml
+++ b/feature/movie-details/src/main/res/layout/movie_details_fragment.xml
@@ -18,13 +18,13 @@
             style="@style/ivBackdrop"
             android:layout_width="match_parent"
             android:layout_height="@dimen/ivBackdropHeight"
+            android:contentDescription="@string/ivBackdropContentDescription"
             app:layout_constraintBottom_toTopOf="@+id/tvTitle"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.0"
             app:layout_constraintVertical_chainStyle="packed"
-            tools:ignore="ContentDescription"
             tools:src="@android:color/darker_gray" />
 
         <ProgressBar
