[movies-29] feature: Add drawer and jetpack compose menu item switch
This 'Jetpack Compose' menu item switch will be later on be used to
change the screens from using the legacy Android View UI system to using
the new modern Jetpack Compose UI.

--- a/app/src/main/res/layout/app_activity.xml
+++ b/app/src/main/res/layout/app_activity.xml
@@ -46,6 +46,9 @@
         android:layout_height="match_parent"
         android:layout_gravity="start"
         android:background="@color/colorBackground"
+        app:headerLayout="@layout/drawer_header"
+        app:itemIconTint="@color/colorDrawerMenuItem"
+        app:itemTextColor="@color/colorDrawerMenuItem"
         app:menu="@menu/drawer_menu" />
 
 </androidx.drawerlayout.widget.DrawerLayout>
