--- a/core/src/main/res/values/colors.xml
+++ b/core/src/main/res/values/colors.xml
@@ -10,6 +10,9 @@
     <color name="colorBackground">@color/design_default_color_background</color>
     <color name="colorOnBackground">@color/colorPrimary</color>
 
+    <!-- Drawer -->
+    <color name="colorDrawerMenuItem">@color/black</color>
+
     <!-- Snackbar -->
     <color name="colorSnackbarBackground">@color/colorPrimary</color>
     <color name="colorSnackbarText">@color/white</color>
