--- a/app/src/main/res/menu/drawer_menu.xml
+++ b/app/src/main/res/menu/drawer_menu.xml
@@ -1,3 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<menu />
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+
+    <group android:id="@+id/drawerMenuGroup">
+
+        <item
+            android:id="@+id/drawerMenuItemJetpackCompose"
+            android:icon="@drawable/ic_launcher_foreground"
+            android:title="@string/drawerMenuItemJetpackCompose"
+            app:actionLayout="@layout/drawer_menu_item" />
+
+    </group>
+
+</menu>
