--- a/core/src/main/res/values-night/colors.xml
+++ b/core/src/main/res/values-night/colors.xml
@@ -5,6 +5,9 @@
     <color name="colorBackground">@color/black</color>
     <color name="colorOnBackground">@color/colorPrimaryVariant</color>
 
+    <!-- Drawer -->
+    <color name="colorDrawerMenuItem">@color/white</color>
+
     <!-- Snackbar -->
     <color name="colorSnackbarBackground">@color/black</color>
     <color name="colorSnackbarText">@color/design_default_color_error</color>
