--- a/lib/picker/src/main/res/layout/picker_view.xml
+++ b/lib/picker/src/main/res/layout/picker_view.xml
@@ -32,8 +32,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingRight="20dp"
-        android:paddingBottom="10dp">
-
+        android:paddingBottom="10dp"
+        tools:ignore="RtlSymmetry,RtlHardcoded">
 
         <TextView
             android:id="@+id/ok_action"
